# SimoDistribution

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.ps1  docker-build-verifiable.ps1  docker-compose.yml  finalize-program.ps1  src_contract.rs  verify-contract.ps1
client/: direct-web3-client.ts
config/: Cargo.toml
contract/: contract.rs
docs/: DEPLOYMENT_GUIDE.md  README.md  VERIFICATION_GUIDE.md
keypairs/: .gitignore  README.md
src/: lib.rs
