[package]
name = "payment-distributor"
version = "0.1.0"
description = "Payment distribution smart contract for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_distributor"
path = "src/lib.rs"

[dependencies]
solana-program = "~2.0"  # Compatible with 2.x versions (Anza Agave era)

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
incremental = false
debug = false
